# delly

./: .gitignore  .gitmodules  .travis.yml  .zenodo.json  AUTHORS  CONTRIBUTING.md  CREDITS  Dockerfile  Dockerfile.staticbuild  LICENSE  Makefile  README.md  align_gotoh.h  align_nw.h  align_nw_mat.h  bam_file_adaptor.h  cov.cpp  delly  delly.cpp  dna_score.h  extract.cpp  fasta_reader.h  human.hg19.excl.tsv  mouse.mm10.excl.tsv  pyproject.toml  record.h  signalhandler.h  spancov.cpp  spanning.h  tags.h  util.h  version.h
R/: cnv.R  gcbias.R  isize.R  rd.R  replication.R
assembly/: README.md  assembly.sh  extractAssemblyReads.py
benchmark/: .gitignore  Makefile  README.md  giab.sh  simulate.sh
complexVariants/: complexSvClassifier.py  ddelClassifier.py
converter/: README.md  dellyVcf2Bed.sh  dellyVcf2BndVcf.py
cwl/: delly-job.json  delly.cwl
docker/: Dockerfile  README.md  delly.cwl
example/: DEL.bam.bai  DEL.vcf  ex.sh  lr.bam  lr.bam.bai  map.fa.gz.fai  map.fa.gz.gzi  ref.fa  sr.bam  sr.bam.bai
excludeTemplates/: drosophila.dm6.excl.tsv  human.hg19.excl.tsv  human.hg38.excl.tsv  mouse.mm9.excl.tsv  yeast.sacCer3.excl.tsv
parallel/: Dockerfile
python/: addRefAllele.py  populationFilter.py  readfq.py  somaticFilter.py
scripts/: README.md  delly2bnd.py  readfq.py
singularity/: README.md  delly.def
src/: align.h  align_config.h  align_gotoh.h  align_nw.h  align_nw_mat.h  alphabet.h  annotate.cpp  asmode.h  assemble.h  bed.h  bolog.h  chimera.h  classify.h  cluster.h  cnv.h  compvcf.h  coral.h  cov.cpp  coverage.h  delly  delly.cpp  delly.h  dpe.cpp  (+51 more)
(+71 files in other folders)
